[tool.poetry]
name = "kaggle-playground"
version = "0.1.0"
description = ""
authors = ["pyto86 <pyto86.me@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.2"
numpy = "1.19.4"
scipy = "1.6.0"
pandas = "1.2.0"
scikit-learn = "0.24.0"
xgboost = "1.3.1"
lightgbm = "3.1.1"
tensorflow = "2.4.0"
Keras = "2.4.3"

[tool.poetry.dev-dependencies]
jupyterlab = "3.0.0"
matplotlib = "3.3.3"
kaggle = "1.5.10"
flake8 = "^3.8.4"
isort = "^5.7.0"
black = "^20.8b1"

[tool.poetry.scripts]
lint = "script.scripts:lint"
format = "script.scripts:format"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
